[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/menu_main/creditos/Creditos.gd" type="Script" id=1]
[ext_resource path="res://assets/creditos/creditos6seg.ogv" type="VideoStream" id=2]
[ext_resource path="res://assets/creditos/button_cred/volver_luz.png" type="Texture" id=3]
[ext_resource path="res://assets/creditos/button_cred/volver__negrita.png" type="Texture" id=4]

[node name="Creditos" type="Node2D"]
script = ExtResource( 1 )

[node name="BackgroundCreds" type="VideoPlayer" parent="."]
margin_right = 1366.0
margin_bottom = 768.0
stream = ExtResource( 2 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="."]
margin_left = 970.0
margin_top = 466.0
margin_right = 1155.0
margin_bottom = 516.0
rect_min_size = Vector2( 150, 40 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="finished" from="BackgroundCreds" to="." method="_on_BackgroundCreds_finished"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
